k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker
    labels:
        app: worker
spec:
    replicas: 1
    selector:
        matchLabels:
            app: worker
    template:
        metadata:
            labels:
                app: worker
        spec:
            imagePullSecrets:
                - name: dockerconfig
            containers:
                - name: worker
                  image: ghcr.io/raine-works/kube-demo/worker:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
                  resources:
                      requests:
                          cpu: '300m'
                          memory: '50Mi'
                      limits:
                          cpu: '500m'
                          memory: '500Mi'
