k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: worker
spec:
    selector:
        app: worker
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
    type: ClusterIP
